Update Readme file

--- a/myhobby.html
+++ b/myhobby.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../css/style.css" />
+        <link rel="stylesheet" href="./css/style.css" />
         <title>My Hobby | Wrestling</title>
     </head>
     <body>
         <header>
+            <ul> <li>simple</ul>
             <h1>Wrestling - My Favorite Hobby</h1>
         </header>
         <main>
@@ -21,7 +22,7 @@
             <p>
                 Out of all the professional wrestling organizations, WWE
                 <a href="https://wwe.com/">
-                    <img src="../images/wwe.png" alt="wwe logo"/>
+                    <img src="./images/wwe.png" alt="wwe logo"/>
                 </a> is the one that I cherish the most, and as for my personal
                 preference, the Undertaker stands as the greatest wrestler of
                 all time (GOAT). I have always held him in high esteem and have
@@ -30,7 +31,7 @@
                 it always does the job of taking out his opponents.
             </p>
             <img class="img"
-                 src="../images/Taker-Shawn.jpg"
+                 src="./images/Taker-Shawn.jpg"
                  alt="The Undertaker perfroming the RIP on Shawn Micheals"/>
             <p>
                 My favourite match of the Undertaker was his Wrestlemania 25
@@ -40,7 +41,7 @@
             <p>You can watch the highlights of the match below</p>
             <video controls>
                 <source
-                    src="../video/The Undertaker vs. Shawn Michaels_ WrestleMania XXV.mp4"
+                    src="./video/The Undertaker vs. Shawn Michaels_ WrestleMania XXV.mp4"
                     type="video/mp4"/>
                 Your browser does not support the video tag.
             </video>
